--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "MERN",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm start",
+    "dev": "nodemon start",
+    "start": "node start"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,12 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.2",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
