--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
